# polars-qt

./: .gitignore  Cargo.toml  Makefile  README.ipynb  README.md  playground.ipynb  pyproject.toml  run.py  rustfmt.toml
.github/workflows/: publish_to_pypi.yml
polars_qt/: __init__.py  expr.py  functions.py  pint.py  typing.py  units.py
polars_unit/: __init__.py  expr.py  functions.py
src/: expressions.rs  lib.rs  units.rs  units_default_pint.json
src/units/: conversion.rs  definitions.rs
tests/: test_abs.py  test_conversion.py  test_expr.py  test_noop.py  test_ops.py  test_pig_latinnify.py  test_python_api.py  test_units.py
