[package]
name = "polars-unit"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_unit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = [
    "abi3-py38"#, "extension-module" otherwise test don't work
]}
pyo3-polars = { version = "0.19.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.45.1", default-features = false, features = [
    "dtype-struct",
    "dtype-categorical",
    "abs",
    "lazy",
    "trigonometry",
    "cum_agg",
    "dtype-i16",
] }
