[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-qt"
description = "Quantities (physicla units and uncertanties) for polars"
authors = [{ name = "Simone Massaro", email = "mail@mone27.net" }]
requires-python = ">=3.8"
classifiers = ["Programming Language :: Rust"]
version = "0.2.0"
[tool.maturin]
module-name = "polars_qt._internal"

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12"
polars = "*"
maturin = "*"
ruff = "*"
pytest = "*"
mypy = "*"
rust = "*"
uv = ">=0.5.10,<0.6"
gcc = ">=14.2.0,<14.3"
jupyterlab = "*"

[tool.pixi.pypi-options]
no-build-isolation = ["polars-qt"]


[tool.pixi.pypi-dependencies]
# polars-qt = { path = ".", editable = true }

[tool.pixi.tasks]

build = "maturin develop --uv"
test = "pytest tests"
render_readme = "jupyter nbconvert --to markdown README.ipynb --output README.md"
