[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-qt"
description = "Quantities (physicla units and uncertanties) for polars"
authors = [{ name = "Simone Massaro", email = "mail@mone27.net" }]
requires-python = ">=3.9"
classifiers = ["Programming Language :: Rust"]
version = "0.2.0"
[tool.maturin]
module-name = "polars_qt._internal"
# workaround for https://pyo3.rs/main/faq#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
features = ["pyo3/extension-module"]

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.9"
polars = "*"
maturin = "*"
ruff = "*"
pytest = "*"
mypy = "*"
rust = "*"
uv = "*"
gcc = "*"
jupyterlab = "*"

[tool.pixi.pypi-options]
no-build-isolation = ["polars-qt"]


[tool.pixi.feature.py39.dependencies]
python = "3.9.*"
[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"


[tool.pixi.environments]
py39 = ["py39"]
py310 = ["py310"]
py311 = ["py311"]   
py312 = ["py312"]



[tool.pixi.pypi-dependencies]
# polars-qt = { path = ".", editable = true }

[tool.pixi.tasks]

build = "maturin develop --uv"
build-release = "maturin develop --release --uv"
test = "pytest tests"
render_readme = "jupyter nbconvert --to markdown README.ipynb --output README.md"
pre-commit = """
cargo fmt --all && cargo clippy --all-features &&
ruff check . --fix --exit-non-zero-on-fix &&
ruff format . &&
mypy tests
"""
